--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
-
-
+     <inja-card></inja-card>
   </template>
 
   <!-- build:js scripts/app.js -->
