updating data binding, pushing v0.1

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
-     <inja-card name="Ping Pong Table" author="@snejati86" up-vote="10" down-vote="8" desc="Ops I did it again!"></inja-card>
+     <inja-card name="Ping Pong Table" author="@snejati86" up-vote="10"></inja-card>
   </template>
 
   <!-- build:js scripts/app.js -->
