--- a/app/elements/inja-card.html
+++ b/app/elements/inja-card.html
@@ -39,20 +39,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </style>
     <paper-card>
         <div class="card row text-center">
-            <div class="col-sm-2 left">
+            <div class="col-sm-4 left">
                 <h1 id="upvote">{{upVote}}</h1>
                 <img class="heart" src="../../images/heart.png">
             </div>
-            <div on-tap="toggleView" class="col-sm-8 middle" >
+            <div class="col-sm-8 middle" >
 
                 <div hidden$="{{shortView}}">
                     <h3>{{desc}}</h3>
-                </div>
+                    </div>
+                <div hidden$="{{!shortView}}">
                 <h1 id="title">{{name}}</h1>
+                </div>
                 <h3 id="user">{{author}}</h3>
-            </div>
-            <div class="col-sm-2 right">
-                <h1 id="downvote">{{downVote}}</h1>
+
             </div>
         </div>
     </paper-card>
@@ -67,10 +67,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 behaviors: [
                     Polymer.NeonAnimationRunnerBehavior
                 ],
-                toggleView : function(){
-                  console.log('Damn');
-                  this.shortView = !this.shortView;
-                },
                 properties: {
                     animationConfig: {
                         value: function() {
@@ -81,11 +77,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             }
                         }
                     },
-                    shortView : {
-                        type : Boolean,
-                        value : true,
-                        notify : true
-                    },
                     name: {
                         type: String
                     },
@@ -93,9 +84,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         type: String
                     },
                     upVote:{
-                        type: Number
-                    },
-                    downVote:{
                         type: Number
                     },
                     desc:{
@@ -119,13 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     this.playAnimation();
                 },
 
-
                 ready: function() {
-
-/*                    this.$$("#title").innerHTML = this.name;
-                    this.$$("#upvote").innerHTML = this.upVote;
-                    this.$$("#downvote ").innerHTML = this.downVote;
-                    this.$$("#user").innerHTML = this.author;*/
                     this.animate();
 
                 }
