updates to CSS playing around with the card.

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
      <inja-card name="Ping Pong Table" author="@snejati86" up-vote="10"></inja-card>
+      <inja-card name="Something else" author="@kiki" up-vote="40"></inja-card>
+      <inja-card name="Boatlifting" author="@reed3" up-vote="15"></inja-card>
+
   </template>
 
   <!-- build:js scripts/app.js -->
