This is the first revision of the face book login button, PageJs routes to come.

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- endbuild-->
 
@@ -64,9 +64,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
-     <inja-card name="Ping Pong Table" author="@snejati86" up-vote="10"></inja-card>
+    <div class="center-block">
+  <h1>Inja main logo</h1>
+      <login-button service="Facebook"></login-button>
+    </div>
+     <!--<inja-card name="Ping Pong Table" author="@snejati86" up-vote="10"></inja-card>
       <inja-card name="Something else" author="@kiki" up-vote="40"></inja-card>
-      <inja-card name="Boatlifting" author="@reed3" up-vote="15"></inja-card>
+      <inja-card name="Boatlifting" author="@reed3" up-vote="15"></inja-card>-->
 
   </template>
 
