--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -38,3 +38,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="./inja-card.html">
+<link rel="import" href="./login-button.html">
