--- a/app/elements/inja-card.html
+++ b/app/elements/inja-card.html
@@ -32,10 +32,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 color: #fff;
                 font-family: "Roboto", sans-serif;
             }
-            .heart{
-                height: 25px;
-                width: 25px;
-            }
             span {
                  @apply(--paper-font-body1);
             }
@@ -46,7 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="">
             <div class="col-xs-3 left">
                 <h1 id="upvote">{{upVote}}</h1>
-                <img class="heart" src="../../images/heart.png">
+                <paper-fab  mini icon="favorite" title="heart"></paper-fab>
             </div>
             <div class="col-xs-6 middle text-center" >
 
