--- a/app/elements/inja-card.html
+++ b/app/elements/inja-card.html
@@ -12,6 +12,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/paper-badge/paper-badge.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
+
 <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
 
@@ -21,14 +27,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <style>
             :host {
                 display: block;
+                margin: .25em;
+                max-height: 350px;
+                --paper-badge-background: {
+                      #69F0AE
+                };
+                --paper-badge-text-color: {
+                  black;
+                }
+
             }
             .card{
-                background-color: #036cdb;
-                min-width: 100%;
-                margin: 1%;
-                height: 17%;
+                --paper-card-header-color: {
+                  black;
+                }
+                --paper-card-background-color: {
+                  #304ffe;
+                };
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
             }
-            .left,.middle{
+            .card-content {
                 color: #fff;
                 font-family: "Roboto", sans-serif;
             }
@@ -38,25 +58,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             h1,h3 { font-size: 2em }
 
         </style>
-    <paper-card class="card">
-        <div class="">
-            <div class="col-xs-3 left">
-                <h1 id="upvote">{{upVote}}</h1>
-                <paper-fab  mini icon="favorite" title="heart"></paper-fab>
-            </div>
-            <div class="col-xs-6 middle text-center" >
-
-                <div hidden$="{{shortView}}">
-                    <h3>{{desc}}</h3>
-                    </div>
-                <div hidden$="{{!shortView}}">
-                <h1 id="title">{{name}}</h1>
-                </div>
-                <h3 id="user">{{author}}</h3>
-
-            </div>
+      <paper-card class="card" heading="{{author}}" image="{{image}}" id="card" elevation="3">
+        <div hidden$="{{!isEditing}}" class="card-content">
+          <paper-input label="Name" value="{{name}}"></paper-input>
+          <paper-input label="URL" value="{{image}}"></paper-input>
+          <paper-fab id="create" mini icon="create" title="create" on-tap="toggleEdit"></paper-fab>
         </div>
-    </paper-card>
+          <div hidden$="{{isEditing}}" class="card-content">
+              <h3 id="user">{{name}}</h3>
+              <div class="card-actions">
+                <paper-fab id="favorite" mini icon="favorite" title="heart"></paper-fab>
+                <paper-badge id="upvote" for="favorite" label="{{upVote}}"></paper-badge>
+              </div>
+          </div>
+      </paper-card>
     </template>
 
     <script>
@@ -79,16 +94,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         }
                     },
                     name: {
-                        type: String
+                        type: String,
+                        notify: true,
+                        value: ''
                     },
                     author:{
-                        type: String
+                        type: String,
+                        notify: true,
+                        value: ''
                     },
                     upVote:{
                         type: Number
                     },
                     desc:{
-                        type:String
+                        type: String
+                    },
+                    image: {
+                      type: String
+                    },
+                    isEditing: {
+                      type: Boolean,
+                      value: false
                     }
 
                 },
@@ -110,7 +136,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                 ready: function() {
                     this.animate();
-
+                },
+                toggleEdit: function() {
+                  this.isEditing = !this.isEditing;
                 }
             });
         })();
