--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -25,9 +25,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --primary-text-color: #212121;
+    --primary-text-color: #ffffff;
     --primary-background-color: #ffffff;
-    --secondary-text-color: #737373;
+    --secondary-text-color: #ffffff;
     --disabled-text-color: #9b9b9b;
     --divider-color: #dbdbdb;
     --primary-color: #3f51b5;
